<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cortesi.giacomo.eartrainingapp.SecondLevelActivity">

    <TextView
        android:id="@+id/pressBtnTextTriads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_play_button_triads"
        android:textSize="20sp"
        android:textColor="@color/dark_red"/>
    <ImageButton
        android:id="@+id/PlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pressBtnTextTriads"
        android:layout_centerHorizontal="true"
        android:background="@drawable/play_button_icon"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupTriads1"
        android:layout_below="@id/PlayButton"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_minor_triad"
            android:text="@string/radio_button_minor_triad"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_diminished_triad"
            android:text="@string/radio_button_diminished_triad"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_sus4_triad"
            android:text="@string/radio_button_sus4_triad"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
    </RadioGroup>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupTriads2"
        android:layout_below="@id/PlayButton"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_major_triad"
            android:text="@string/radio_button_major_triad"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_augmented_triad"
            android:text="@string/radio_button_augmented_triad"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_sus2_triad"
            android:text="@string/radio_button_sus2_triad"
            android:checked="false"
            android:buttonTint="@color/dark_red"/>
    </RadioGroup>
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:layout_below="@id/radioGroupTriads1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/submit_button_shape"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"/>
    <ProgressBar
        android:id="@+id/scoreBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitButton"
        android:paddingTop="20sp"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:max="100"
        android:indeterminate="false"/>
    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scoreBar"
        android:layout_below="@+id/scoreBar"/>

</RelativeLayout>
