<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_practice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_orange"
    tools:context="com.cortesi.giacomo.eartrainingapp.PracticeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/relativeLayout"
        android:layout_marginBottom="30dp">
        <Button
            android:id="@+id/IntervalsButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/intervals_button"
            android:textColor="@color/dark_red"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:background="@drawable/main_activity_button_shape"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="25sp"
            android:layout_marginTop="50sp"
            android:elevation="0dp"
            android:onClick="startTabbedActivity"/>
        <Button
            android:id="@+id/triadsButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/triads_button"
            android:textColor="@color/dark_red"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:background="@drawable/main_activity_button_shape"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:layout_marginTop="50sp" />
        <Button
            android:id="@+id/chordsButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/chords_button"
            android:textColor="@color/dark_red"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:background="@drawable/main_activity_button_shape"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:layout_marginTop="50sp"/>
    </LinearLayout>
</RelativeLayout>
