<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_orange"
    tools:context="com.cortesi.giacomo.eartrainingapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/relativeLayout"
        android:layout_marginBottom="30dp">
        <Button
            android:id="@+id/startButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:textColor="@color/dark_red"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:background="@drawable/main_activity_button_shape"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="25sp"
            android:layout_marginTop="50sp"
            android:elevation="0dp"
            android:onClick="startFirstLevelActivity"/>
        <Button
            android:id="@+id/practiceButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/practice_button"
            android:textColor="@color/dark_red"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:background="@drawable/main_activity_button_shape"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:layout_marginTop="50sp"
            android:onClick="startPracticeActivity"/>
        <Button
            android:id="@+id/statsButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/stats_button"
            android:textColor="@color/dark_red"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:background="@drawable/main_activity_button_shape"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:layout_marginTop="50sp"/>
    </LinearLayout>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:background="@drawable/info_icon"
        android:layout_centerHorizontal="true"
        android:onClick="startInfoActivity"/>

</RelativeLayout>
